--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     
     <div class="landing-content">
         <img src="images/logo.png" class="main-logo">
-        <h1 class="header">DRIFT</h1>
+        <h1 class="header">DRYFT</h1>
         <div class="auth-buttons">
             <button class="landing-button" onclick="showPage('signup')">GET STARTED</button>
             <button class="landing-button" onclick="showPage('login')">LOG IN</button>
