added back buttons

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 
     <!-- Login Page -->
     <div id="login" class="page">
+        <button class="back-button" onclick="goBack()">
+            <i class="fas fa-arrow-left"></i>
+        </button>
         <h1 class="header">LOG IN</h1>
         <div class="form-group">
             <input type="text" class="auth-input" placeholder="USERNAME">
@@ -38,6 +41,9 @@
 
     <!-- Signup Page -->
     <div id="signup" class="page">
+        <button class="back-button" onclick="goBack()">
+            <i class="fas fa-arrow-left"></i>
+        </button>
         <h1 class="header">SIGN UP</h1>
         <div class="form-group">
             <button class="account-button">BUSINESS</button>
@@ -52,6 +58,9 @@
 
     <!-- Home Page -->
     <div id="home" class="page">
+        <button class="back-button" onclick="goBack()">
+            <i class="fas fa-arrow-left"></i>
+        </button>
         <div class="search-bar">
             <input type="text" class="auth-input" placeholder="Search">
         </div>
@@ -90,6 +99,9 @@
 
     <!-- Feed Page -->
     <div id="feed" class="page">
+        <button class="back-button" onclick="goBack()">
+            <i class="fas fa-arrow-left"></i>
+        </button>
         <h2 class="header">FEED</h2>
         <div class="business-card">
             <h4>Recent Updates</h4>
@@ -103,6 +115,9 @@
 
     <!-- Profile Page -->
     <div id="profile" class="page">
+        <button class="back-button" onclick="goBack()">
+            <i class="fas fa-arrow-left"></i>
+        </button>
         <div class="profile-header">
             <h2>FREZNOS</h2>
             <div class="profile-stats">
@@ -125,6 +140,9 @@
 
     <!-- Map Page -->
     <div id="map" class="page">
+        <button class="back-button" onclick="goBack()">
+            <i class="fas fa-arrow-left"></i>
+        </button>
         <div class="map-container"></div>
         <!-- Navigation Bar -->
         <div class="nav-bar">
@@ -134,6 +152,9 @@
 
     <!-- Tokens Page -->
     <div id="tokens" class="page">
+        <button class="back-button" onclick="goBack()">
+            <i class="fas fa-arrow-left"></i>
+        </button>
         <h2 class="header">TOKENS</h2>
         <div class="business-card">
             <h4>Pizza Planet</h4>
