--- a/index.html
+++ b/index.html
@@ -11,14 +11,8 @@
 <body>
     <!-- Landing Page -->
 <div id="landing" class="page active-page">
-    <div class="landing-bg">
-        <img src="images/bg-pattern-1.png" class="bg-pattern pattern-1">
-        <img src="images/bg-pattern-2.png" class="bg-pattern pattern-2">
-    </div>
-    
     <div class="landing-content">
-        <img src="images/logo.png" class="main-logo">
-        <h1 class="header">DRYFT</h1>
+        <img src="images/logo.png" class="main-logo" alt="DRYFT logo">
         <div class="auth-buttons">
             <button class="landing-button" onclick="showPage('signup')">GET STARTED</button>
             <button class="landing-button" onclick="showPage('login')">LOG IN</button>
@@ -31,6 +25,7 @@
         <button class="back-button" onclick="goBack()">
             <i class="fas fa-arrow-left"></i>
         </button>
+        <img src="images/logo.png" class="main-logo" alt="DRYFT logo">
         <h1 class="header">LOG IN</h1>
         <div class="form-group">
             <input type="text" class="auth-input" placeholder="USERNAME">
@@ -44,6 +39,7 @@
         <button class="back-button" onclick="goBack()">
             <i class="fas fa-arrow-left"></i>
         </button>
+        <img src="images/logo.png" class="main-logo" alt="DRYFT logo">
         <h1 class="header">SIGN UP</h1>
         <div class="form-group">
             <button class="account-button">BUSINESS</button>
@@ -84,7 +80,7 @@
                 <span>Feed</span>
             </div>
             <div class="nav-item logo-nav" onclick="showPage('tokens')">
-                <img src="logo-icon.png" alt="DRIFT Logo">
+                <img src="images/logo.png" alt="DRIFT Logo">
             </div>
             <div class="nav-item" onclick="showPage('map')">
                 <i class="fas fa-map-marked"></i>
