token top ten home page

--- a/index.html
+++ b/index.html
@@ -64,7 +64,28 @@
         <div class="search-bar">
             <input type="text" class="auth-input" placeholder="Search">
         </div>
-        
+        <!-- Token Top Ten Section -->
+    <div class="token-top-ten">
+        <h2>Token Top Ten</h2>
+        <div class="token-scroll-container">
+            <!-- Token Item 1 -->
+            <div class="token-item">
+                <img src="images/token1.png" alt="Token 1">
+                <p>Record Store</p>
+            </div>
+            <!-- Token Item 2 -->
+            <div class="token-item">
+                <img src="images/token2.png" alt="Token 2">
+                <p>Camping Store</p>
+            </div>
+            <!-- Token Item 3 -->
+            <div class="token-item">
+                <img src="images/token3.png" alt="Token 3">
+                <p>Pizza Planet</p>
+            </div>
+            <!-- Add more token items as needed -->
+        </div>
+    </div>
         <div class="category-section">
             <h3 class="category-title">Italian Food</h3>
             <div class="business-card">
@@ -166,19 +187,7 @@
         </div>
     </div>
 
-    <!-- Star of the Week Page -->
-<div id="starOfTheWeek" class="page">
-    <!-- Back Button -->
-    <button class="back-button" onclick="goBack()">
-        <i class="fas fa-arrow-left"></i>
-    </button>
-
-    <h2 class="header">Star of the Week</h2>
-    <div class="business-card">
-        <h4>Pizza Planet</h4>
-        <p>Congratulations! Pizza Planet is this week's star business.</p>
-    </div>
-</div>
+    
 
     <script src="script.js"></script>
 </body>
