added more tokens

--- a/index.html
+++ b/index.html
@@ -83,6 +83,41 @@
                 <img src="images/token3.png" alt="Token 3">
                 <p>Pizza Planet</p>
             </div>
+            <!-- Token Item 4 -->
+            <div class="token-item">
+                <img src="images/Token4.png" alt="Token 4">
+                <p>Store</p>
+            </div>
+            <!-- Token Item 5 -->
+            <div class="token-item">
+                <img src="images/Token4.png" alt="Token 4">
+                <p>Store</p>
+            </div>
+            <!-- Token Item 6 -->
+            <div class="token-item">
+                <img src="images/Token4.png" alt="Token 4">
+                <p>Store</p>
+            </div>
+            <!-- Token Item 7 -->
+            <div class="token-item">
+                <img src="images/Token4.png" alt="Token 4">
+                <p>Store</p>
+            </div>
+            <!-- Token Item 8 -->
+            <div class="token-item">
+                <img src="images/Token4.png" alt="Token 4">
+                <p>Store</p>
+            </div>
+            <!-- Token Item 9 -->
+            <div class="token-item">
+                <img src="images/Token4.png" alt="Token 4">
+                <p>Store</p>
+            </div>
+            <!-- Token Item 10 -->
+            <div class="token-item">
+                <img src="images/Token4.png" alt="Token 4">
+                <p>Store</p>
+            </div>
             <!-- Add more token items as needed -->
         </div>
     </div>
