--- a/index.html
+++ b/index.html
@@ -121,13 +121,90 @@
             <!-- Add more token items as needed -->
         </div>
     </div>
-        <div class="category-section">
-            <h3 class="category-title">Italian Food</h3>
-            <div class="business-card">
-                <h4>Freznos</h4>
-                <p>#382 Ranking</p>
+   <!-- Local Recs Section -->
+   <div class="local-recs">
+    <h2>Local Recs</h2>
+
+    <!-- Surf Shops -->
+    <div class="local-category">
+        <h3>Surf Shops</h3>
+        <div class="local-scroll-container">
+            <div class="local-item">
+                <img src="images/surf1.jpg" alt="Wave Rider">
+                <p>Wave Rider</p>
             </div>
+            <div class="local-item">
+                <img src="images/surf2.jpg" alt="Board House">
+                <p>Board House</p>
+            </div>
+            <div class="local-item">
+                <img src="images/surf3.jpg" alt="Surf Shack">
+                <p>Surf Shack</p>
+            </div>
+            <!-- Add more surf shops as needed -->
         </div>
+    </div>
+
+    <!-- Italian Restaurants -->
+    <div class="local-category">
+        <h3>Italian Restaurants</h3>
+        <div class="local-scroll-container">
+            <div class="local-item">
+                <img src="images/italian1.jpg" alt="La Dolce Vita">
+                <p>La Dolce Vita</p>
+            </div>
+            <div class="local-item">
+                <img src="images/italian2.jpg" alt="Amore Mio">
+                <p>Amore Mio</p>
+            </div>
+            <div class="local-item">
+                <img src="images/italian3.jpg" alt="Pasta Palace">
+                <p>Pasta Palace</p>
+            </div>
+            <!-- Add more Italian restaurants as needed -->
+        </div>
+    </div>
+
+    <!-- Sushi Restaurants -->
+    <div class="local-category">
+        <h3>Sushi Restaurants</h3>
+        <div class="local-scroll-container">
+            <div class="local-item">
+                <img src="images/sushi1.jpg" alt="Sushi Haven">
+                <p>Sushi Haven</p>
+            </div>
+            <div class="local-item">
+                <img src="images/sushi2.jpg" alt="Rolling Sushi">
+                <p>Rolling Sushi</p>
+            </div>
+            <div class="local-item">
+                <img src="images/sushi3.jpg" alt="Wasabi World">
+                <p>Wasabi World</p>
+            </div>
+            <!-- Add more sushi restaurants as needed -->
+        </div>
+    </div>
+
+    <!-- Coffee Shops -->
+    <div class="local-category">
+        <h3>Coffee Shops</h3>
+        <div class="local-scroll-container">
+            <div class="local-item">
+                <img src="images/coffee1.jpg" alt="Morning Roast">
+                <p>Morning Roast</p>
+            </div>
+            <div class="local-item">
+                <img src="images/coffee2.jpg" alt="Java Haven">
+                <p>Java Haven</p>
+            </div>
+            <div class="local-item">
+                <img src="images/coffee3.jpg" alt="Sip Happens">
+                <p>Sip Happens</p>
+            </div>
+            <!-- Add more coffee shops as needed -->
+        </div>
+    </div>
+</div>
 
         <!-- Navigation Bar -->
         <div class="nav-bar">
