--- a/index.html
+++ b/index.html
@@ -940,6 +940,54 @@
     </div>
 </div>
 
+<!-- Scan Token Page -->
+<div id="scanToken" class="page">
+    <!-- Back Button -->
+    <button class="back-button" onclick="goBack()">
+        <i class="fas fa-arrow-left"></i>
+    </button>
+
+    <!-- Scan Token Title -->
+    <h1 class="header">Scan Token</h1>
+
+    <!-- Camera Preview Area -->
+    <div class="camera-preview">
+        <!-- Placeholder for camera feed -->
+        <div class="camera-feed"></div>
+
+        <!-- QR Code Scanning Animation -->
+        <div class="scan-animation">
+            <div class="scan-line"></div>
+        </div>
+    </div>
+
+    <!-- Scanning Message -->
+    <p class="scanning-message">Scanning...</p>
+
+    <!-- Navigation Bar -->
+    <div class="nav-bar">
+        <div class="nav-item" onclick="showPage('home')">
+            <i class="fas fa-home"></i>
+            <span>Home</span>
+        </div>
+        <div class="nav-item" onclick="showPage('feed')">
+            <i class="fas fa-list"></i>
+            <span>Feed</span>
+        </div>
+        <div class="nav-item logo-nav" onclick="showPage('tokens')">
+            <img src="images/logo.png" alt="DRYFT Logo">
+        </div>
+        <div class="nav-item" onclick="showPage('map')">
+            <i class="fas fa-map-marked"></i>
+            <span>Map</span>
+        </div>
+        <div class="nav-item" onclick="showPage('profile')">
+            <i class="fas fa-user"></i>
+            <span>Profile</span>
+        </div>
+    </div>
+</div>
+
     <script src="script.js"></script>
 </body>
 </html>
